--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=sqss3api
+
+aws.accessKeyId=YOUR ACCESSKEYID
+aws.secretKey=YOUR_SECRET_KEY
+aws.region=REGION
+aws.sns.topic.catalog.arn=ARN
